crates/cockpitctl-domain-buildfix/tests/snapshots/snapshot_tests__buildfix_end_to_end_guarded_gate.snap
---
source: crates/cockpitctl-domain-buildfix/tests/snapshot_tests.rs
expression: auto
---
[
  {
    "fix_id": "safe-fix",
    "sensor_id": "sensor",
    "safety": "safe",
    "description": "description for safe-fix",
    "matched_findings": [
      {
        "sensor_id": "sensor",
        "code": "CODE-1",
        "fingerprint": "fp-1"
      }
    ],
    "unmatched": false
  },
  {
    "fix_id": "guarded-fix",
    "sensor_id": "sensor",
    "safety": "guarded",
    "description": "description for guarded-fix",
    "matched_findings": [
      {
        "sensor_id": "sensor",
        "code": "CODE-2",
        "fingerprint": "fp-2"
      }
    ],
    "unmatched": false
  }
]
