crates/cockpitctl-domain-buildfix/tests/snapshots/snapshot_tests__buildfix_plan_empty.snap
---
source: crates/cockpitctl-domain-buildfix/tests/snapshot_tests.rs
expression: summary
---
{
  "fixes": [],
  "total_fixes": 0,
  "matched_count": 0,
  "unmatched_count": 0
}
