crates/cockpitctl-domain-buildfix/tests/snapshots/snapshot_tests__buildfix_plan_single_match.snap
---
source: crates/cockpitctl-domain-buildfix/tests/snapshot_tests.rs
expression: summary
---
{
  "fixes": [
    {
      "fix_id": "fix-1",
      "sensor_id": "sensor",
      "safety": "safe",
      "description": "description for fix-1",
      "matched_findings": [
        {
          "sensor_id": "sensor",
          "code": "CODE-1",
          "fingerprint": "fp-1"
        }
      ],
      "unmatched": false
    }
  ],
  "total_fixes": 1,
  "matched_count": 1,
  "unmatched_count": 0
}
