crates/cockpitctl-domain-buildfix/tests/snapshots/snapshot_tests__select_auto_apply_with_match_requirement.snap
---
source: crates/cockpitctl-domain-buildfix/tests/snapshot_tests.rs
expression: selected
---
[
  {
    "fix_id": "matched-safe",
    "sensor_id": "sensor",
    "safety": "safe",
    "description": "desc-matched-safe",
    "matched_findings": [
      {
        "sensor_id": "sensor",
        "code": "CODE-1"
      }
    ],
    "unmatched": false
  }
]
